Update below function
1. Account Log的功能。因为功能涉及的改动比较多，此版本只能提供家乐福的Account
Log的功能。其他零售商的功能会在13号release。请先测试家乐福的功能是否符合需求。
2. 在每次Merge之前先清理对应的时间段的Exception文件夹内的文件
3. 在Exception里面保留Receive的Store No.(家乐福)
4. 在Exception中添加Remarks字段。
a) 如果因为mapping列表中无相关配置造成的无法匹配成功，Remarks会显示：“找不到门店ID与名称的对应关系配置”
b) 如果因为找不到收货单相应的订单信息，Remarks会显示：“找不到收货单对应的订单信息”

--- a/mengniu/src/main/resources/system.properties
+++ b/mengniu/src/main/resources/system.properties
@@ -15,13 +15,19 @@ temp.path=c:/mengniu/temp/
 #有问题的用户名文件目录
 incorrect.user.path=c:/mengniu/incorrectuser/
 
+
+#账户运行记录文件目录
+account.log.path=c:/mengniu/accountlog/
+account.log.filename=AccountLog
+account.log.fieldname=Retailer,Account,Password,Login Success?,Data Date,Download Order Amount,Download Receiving Amount,Merged Order Amount,Download Sales Amount,Merged Sales Amount,Completed?
+
 #订单文件格式
 #不可自行修改
 order.header=Order_No	Order_Date	Store_No	Store_Name	Item_Code	Item_Name	Barcode	Quantity	Unit_Price	Amount
 
 #收货单文件格式
 #不可自行修改
-receving.header=Order_No	Receiving_Date	Store_No	Store_Name	Item_Code	Item_Name	Barcode	Quantity	Unit_Price	Amount
+receving.header=Order_No	Receiving_Date	Store_No	Store_Name	Item_Code	Item_Name	Barcode	Quantity	Unit_Price	Amount	Remarks
 
 #合并后的订单文件格式
 #不可自行修改
