Update Hualian Account Log

--- a/mengniu/src/main/resources/system.properties
+++ b/mengniu/src/main/resources/system.properties
@@ -19,7 +19,7 @@ incorrect.user.path=c:/mengniu/incorrectuser/
 #账户运行记录文件目录
 account.log.path=c:/mengniu/accountlog/
 account.log.filename=AccountLog
-account.log.fieldname=Retailer,Account,Password,Login Success?,Data Date,Download Order Amount,Download Receiving Amount,Merged Order Amount,Download Sales Amount,Merged Sales Amount,Completed?
+account.log.fieldname=Retailer,Account,Password,URL,district,agency,loginNm,storeNo,Login Success?,Data Date,Download Order Amount,Download Receiving Amount,Merged Order Amount,Download Sales Amount,Merged Sales Amount,Completed?
 
 #订单文件格式
 #不可自行修改
