Update timeout config

--- a/mengniu/src/main/resources/carrefour.properties
+++ b/mengniu/src/main/resources/carrefour.properties
@@ -5,14 +5,17 @@
 carrefour.daterange.enable=Y
 
 #日期区间段开始日期
-carrefour.daterange.startDate=2014-01-14
+carrefour.daterange.startDate=2014-02-28
 
 #日期区间段结束日期
-carrefour.daterange.endDate=2014-01-15
+carrefour.daterange.endDate=2014-03-03
 
 #每步操作等待时间(毫秒)
 carrefour.sleep.time=1000
 
+
+#下载出错重试最大次数
+carrefour.connection.timeout.time=30000
 
 ###############################
 #订单下载目录
