--- a/mengniu/src/main/resources/hualian.properties
+++ b/mengniu/src/main/resources/hualian.properties
@@ -5,16 +5,16 @@
 hualian.daterange.enable=Y
 
 #日期区间段开始日期
-hualian.daterange.startDate=2014-01-29
+hualian.daterange.startDate=2014-03-01
 
 #日期区间段结束日期
-hualian.daterange.endDate=2014-01-30
+hualian.daterange.endDate=2014-03-03
 
 #每步操作等待时间(毫秒)
 hualian.sleep.time=1000
 
-#河南地区门店号(中孚店52，二七店41，紫东苑店53,嘉茂店55,沃金店56)
-#hualian.henan.storeNo=52,41,53,55,56
+#下载出错重试最大次数
+hualian.connection.timeout.time=30000
 
 ###############################
 #订单下载目录
