--- a/mengniu/src/main/resources/metro.properties
+++ b/mengniu/src/main/resources/metro.properties
@@ -5,14 +5,16 @@
 metro.daterange.enable=Y
 
 #日期区间段开始日期
-metro.daterange.startDate=2014-01-10
+metro.daterange.startDate=2014-03-01
 
 #日期区间段结束日期
-metro.daterange.endDate=2014-01-15
+metro.daterange.endDate=2014-03-03
 
 #每步操作等待时间(毫秒)
 metro.sleep.time=0
 
+#下载出错重试最大次数
+metro.connection.timeout.time=30000
 
 ###############################
 #订单下载目录
