--- a/mengniu/src/main/resources/rainbow.properties
+++ b/mengniu/src/main/resources/rainbow.properties
@@ -5,14 +5,16 @@
 rainbow.daterange.enable=Y
 
 #日期区间段开始日期
-rainbow.daterange.startDate=2013-12-01
+rainbow.daterange.startDate=2014-02-22
 
 #日期区间段结束日期
-rainbow.daterange.endDate=2013-12-01
+rainbow.daterange.endDate=2014-02-24
 
 #每步操作等待时间(毫秒)
 rainbow.sleep.time=1000
 
+#下载出错重试最大次数
+rainbow.connection.timeout.time=30000
 
 ###############################
 #订单下载目录
