--- a/mengniu/src/main/resources/renrenle.properties
+++ b/mengniu/src/main/resources/renrenle.properties
@@ -5,14 +5,16 @@
 renrenle.daterange.enable=Y
 
 #日期区间段开始日期
-renrenle.daterange.startDate=2013-12-01
+renrenle.daterange.startDate=2014-03-01
 
 #日期区间段结束日期
-renrenle.daterange.endDate=2014-01-15
+renrenle.daterange.endDate=2014-03-03
 
 #每步操作等待时间(毫秒)
 renrenle.sleep.time=1000
 
+#下载出错重试最大次数
+renrenle.connection.timeout.time=30000
 
 ###############################
 #订单下载目录
