--- a/mengniu/src/main/resources/tesco.properties
+++ b/mengniu/src/main/resources/tesco.properties
@@ -5,14 +5,16 @@
 tesco.daterange.enable=Y
 
 #日期区间段开始日期
-tesco.daterange.startDate=2014-01-04
+tesco.daterange.startDate=2014-03-01
 
 #日期区间段结束日期
-tesco.daterange.endDate=2014-01-05
+tesco.daterange.endDate=2014-03-03
 
 #每步操作等待时间(毫秒)
 tesco.sleep.time=1000
 
+#下载出错重试最大次数
+tesco.connection.timeout.time=30000
 
 ###############################
 #订单下载目录
