--- a/mengniu/src/main/resources/yonghui.properties
+++ b/mengniu/src/main/resources/yonghui.properties
@@ -5,14 +5,16 @@
 yonghui.daterange.enable=Y
 
 #日期区间段开始日期
-yonghui.daterange.startDate=2014-01-01
+yonghui.daterange.startDate=2014-03-07
 
 #日期区间段结束日期
-yonghui.daterange.endDate=2014-01-05
+yonghui.daterange.endDate=2014-03-07
 
 #每步操作等待时间(毫秒)
 yonghui.sleep.time=1000
 
+#下载出错重试最大次数
+yonghui.connection.timeout.time=30000
 
 ###############################
 #订单下载目录
