Update connection time out config name

--- a/mengniu/src/main/resources/carrefour.properties
+++ b/mengniu/src/main/resources/carrefour.properties
@@ -14,7 +14,7 @@ carrefour.daterange.endDate=2014-03-03
 carrefour.sleep.time=1000
 
 
-#下载出错重试最大次数
+#网站超时时间限制
 carrefour.connection.timeout.time=30000
 
 ###############################
