--- a/mengniu/src/main/resources/hualian.properties
+++ b/mengniu/src/main/resources/hualian.properties
@@ -5,7 +5,7 @@
 hualian.daterange.enable=Y
 
 #日期区间段开始日期
-hualian.daterange.startDate=2014-03-01
+hualian.daterange.startDate=2014-03-03
 
 #日期区间段结束日期
 hualian.daterange.endDate=2014-03-03
@@ -13,7 +13,7 @@ hualian.daterange.endDate=2014-03-03
 #每步操作等待时间(毫秒)
 hualian.sleep.time=1000
 
-#下载出错重试最大次数
+#网站超时时间限制
 hualian.connection.timeout.time=30000
 
 ###############################
