--- a/mengniu/src/main/resources/metro.properties
+++ b/mengniu/src/main/resources/metro.properties
@@ -13,7 +13,7 @@ metro.daterange.endDate=2014-03-03
 #每步操作等待时间(毫秒)
 metro.sleep.time=0
 
-#下载出错重试最大次数
+#网站超时时间限制
 metro.connection.timeout.time=30000
 
 ###############################
