--- a/mengniu/src/main/resources/rainbow.properties
+++ b/mengniu/src/main/resources/rainbow.properties
@@ -13,7 +13,7 @@ rainbow.daterange.endDate=2014-02-24
 #每步操作等待时间(毫秒)
 rainbow.sleep.time=1000
 
-#下载出错重试最大次数
+#网站超时时间限制
 rainbow.connection.timeout.time=30000
 
 ###############################
