--- a/mengniu/src/main/resources/tesco.properties
+++ b/mengniu/src/main/resources/tesco.properties
@@ -8,12 +8,12 @@ tesco.daterange.enable=Y
 tesco.daterange.startDate=2014-03-01
 
 #日期区间段结束日期
-tesco.daterange.endDate=2014-03-03
+tesco.daterange.endDate=2014-03-17
 
 #每步操作等待时间(毫秒)
 tesco.sleep.time=1000
 
-#下载出错重试最大次数
+#网站超时时间限制
 tesco.connection.timeout.time=30000
 
 ###############################
