--- a/mengniu/src/main/resources/yonghui.properties
+++ b/mengniu/src/main/resources/yonghui.properties
@@ -13,7 +13,7 @@ yonghui.daterange.endDate=2014-03-07
 #每步操作等待时间(毫秒)
 yonghui.sleep.time=1000
 
-#下载出错重试最大次数
+#网站超时时间限制
 yonghui.connection.timeout.time=30000
 
 ###############################
