--- a/mengniu/src/main/resources/renrenle.properties
+++ b/mengniu/src/main/resources/renrenle.properties
@@ -13,7 +13,7 @@ renrenle.daterange.endDate=2014-03-03
 #每步操作等待时间(毫秒)
 renrenle.sleep.time=1000
 
-#下载出错重试最大次数
+#网站超时时间限制
 renrenle.connection.timeout.time=30000
 
 ###############################
